@@ -56,7 +56,8 @@
   - remove DEPRECATED select method relation option
   - remove DEPRECATED update timestamp option
   - remove DEPRECATED insert timestamp option
-
+  - remove DEPRECATED update(DBIx::Custom) method's updated_at option
+  
 0.37
   - catch up Object::Simple 3.16. fix DEPRECATED warnings.
 0.36
